--- a/kernel-ver/rkbox_x88pro_b_3318.config
+++ b/kernel-ver/rkbox_x88pro_b_3318.config
@@ -1,1 +1,5 @@
-#KERNELBRANCH="tag:v5.15.86" #always change to this kernel tag
+#KERNELBRANCH="tag:v5.15.90" #always change to this kernel tag
+DDR_BLOB="rk33/rk3318_ddr_333Mhz_v1.16.bin"
+BOOTBRANCH_BOARD="tag:v2022.04"
+BOOTBRANCH="tag:v2022.04"
+BOOTPATCHDIR="u-boot-rockchip64-v2022.04"
